--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -6,6 +6,20 @@
     </head>
     <body>
         <h1>Chicken Alfredo</h1>
+        <img src="/images/chicken_alfredo.jpg" width="500" height="700">
+        <br>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>2 boneless, skinless chicken breasts</li>
+            <li>8 oz fettuccine pasta</li>
+            <li>2 tbsp butter</li>
+            <li>2 tbsp olive oil (for cooking the chicken)</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 cup heavy cream</li>
+            <li>1 cup grated Parmesan cheese (preferably freshly grated)</li>
+            <li>Salt and pepper (to taste)</li>
+            <li>1 tbsp chopped parsley (for garnish, optional)</li>
+        </ul>
         <a href="../index.html">Home</a>
     </body>
 </html>
