--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chicken_alfredo.html">Recipe Title</a>
+        <a href="recipes/chicken_alfredo.html">Chicken Alfredo</a>
     </body>
 </html>
