--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Chicken Alfredo</h1>
-        <img src="/images/chicken_alfredo.jpg" width="500" height="700">
+        <img src="/images/chicken_alfredo.jpg" width="500" height="600">
         <br>
         <h4>Ingredients</h4>
         <ul>
@@ -20,6 +20,47 @@
             <li>Salt and pepper (to taste)</li>
             <li>1 tbsp chopped parsley (for garnish, optional)</li>
         </ul>
+
+        <h4>Steps</h4>
+        <ol>
+            <li>Cook the pasta:
+                <ul>
+                    <li>Bring a large pot of salted water to a boil. Add the fettuccine pasta and cook according to the package instructions, usually about 8–10 minutes, until al dente. Drain the pasta, reserving about 1/2 cup of pasta water for later. Set aside.</li>
+                </ul>
+            </li>
+            <li>Cook the chicken:
+                <ul>
+                    <li>While the pasta is cooking, season the chicken breasts on both sides with salt and pepper.</li>
+                    <li>Heat the olive oil in a large skillet or pan over medium heat.</li>
+                    <li>Add the chicken breasts and cook for about 6–7 minutes per side, or until golden brown and cooked through (internal temperature should reach 165°F / 74°C).</li>
+                    <li>Once cooked, remove the chicken from the pan and set aside. Let it rest for a few minutes before slicing it into strips or bite-sized pieces.</li>
+                </ul>
+            </li>
+            <li>Makes the Alfredo Sauce:
+                <ul>
+                    <li>In the same skillet, melt the butter over medium heat.</li>
+                    <li>Add the minced garlic and cook for 1–2 minutes until fragrant, being careful not to burn the garlic.</li>
+                    <li>Slowly pour in the heavy cream while stirring, and bring the mixture to a simmer. Let it cook for about 3–5 minutes, stirring occasionally, until it thickens slightly.</li>
+                </ul>
+            </li>
+            <li>Add the Cheese:
+                <ul>
+                    <li>Reduce the heat to low, and gradually add the grated Parmesan cheese, stirring continuously until it’s fully melted and the sauce becomes smooth and creamy.</li>
+                    <li>Taste the sauce and season with more salt and pepper if needed.</li>
+                </ul>
+            </li>
+            <li>Combine Pasta and Sauce:
+                <ul>
+                    <li>Add the drained fettuccine pasta into the skillet with the Alfredo sauce, tossing gently to coat the pasta evenly with the sauce. If the sauce is too thick, add a bit of the reserved pasta water, a little at a time, until it reaches your desired consistency.</li>
+                </ul>
+            </li>
+            <li>Serve:
+                <ul>
+                    <li>Divide the creamy chicken Alfredo pasta onto plates. Top with sliced chicken and a sprinkle of chopped parsley (if using).</li>
+                    <li>Serve immediately, and enjoy!</li>
+                </ul>
+            </li>
+        </ol>
         <a href="../index.html">Home</a>
     </body>
 </html>
