--- a/recipes/chicken_alfredo.html
+++ b/recipes/chicken_alfredo.html
@@ -8,6 +8,10 @@
         <h1>Chicken Alfredo</h1>
         <img src="/images/chicken_alfredo.jpg" width="500" height="600">
         <br>
+        <h2>Description</h2>
+        <p>Chicken Alfredo is a rich and creamy pasta dish that combines tender, seasoned chicken with a velvety Alfredo sauce. The recipe starts by cooking fettuccine pasta until al dente, then pan-searing seasoned chicken breasts to golden perfection. In the same pan, garlic is sautéed in butter, then heavy cream is added and simmered to create a luscious sauce. <br> Grated Parmesan cheese is stirred in, giving the sauce its signature creamy, cheesy texture. The cooked pasta is tossed in the sauce, ensuring every strand is coated, and the sliced chicken is added on top for a hearty, satisfying dish.
+           This comforting classic is quick to prepare, making it perfect for a weeknight dinner or special occasion. <br>With its blend of flavors—rich cream, sharp Parmesan, and savory chicken—Chicken Alfredo is always a crowd-pleaser. Garnished with a sprinkle of fresh parsley for color, it’s the ultimate indulgence for anyone craving creamy, cheesy goodness.</p>
+        <br>
         <h4>Ingredients</h4>
         <ul>
             <li>2 boneless, skinless chicken breasts</li>
