--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/chicken_alfredo.html">Chicken Alfredo</a>
+        <br>
+        <a href="recipes/brownies.html">Brownies</a>
+        <br>
+        <a href="recipes/tres_leches_cake.html">Tres Leches Cake</a>
     </body>
 </html>
