--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -7,6 +7,7 @@
         <h1>Brownies</h1>
         <img src="/images/brownies.jpg" height="600" width="500">
         <br>
+        <h2>Description</h2>
 
         <a href="../index.html">Home</a>
     </body>
