--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -8,6 +8,21 @@
         <img src="/images/brownies.jpg" height="600" width="500">
         <br>
         <h2>Description</h2>
+        <p>
+            Brownies are one of those timeless desserts that feel like comfort in every bite. They’re dense, chocolaty squares with a soft center that melts just slightly under the warmth of your fingers. The aroma alone—deep cocoa mixed with a hint of butter—can turn an ordinary day into something a little sweeter. Each bite gives that perfect blend of chewiness around the edges and velvety softness in the middle, with a rich flavor that satisfies any chocolate craving.
+        </p>
+        <br>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>1/2 cup (1 stick) unsalted butter, melted</li>
+            <li>1 cup granulated sugar</li>
+            <li>2 large eggs</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1/3 cup unsweetened cocoa powder</li>
+            <li>1/2 cup all-purpose flour</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1/4 teaspoon baking powder</li>
+        </ul>
 
         <a href="../index.html">Home</a>
     </body>
