--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -9,7 +9,7 @@
         <br>
         <h2>Description</h2>
         <p>
-            Brownies are one of those timeless desserts that feel like comfort in every bite. They’re dense, chocolaty squares with a soft center that melts just slightly under the warmth of your fingers. The aroma alone—deep cocoa mixed with a hint of butter—can turn an ordinary day into something a little sweeter. Each bite gives that perfect blend of chewiness around the edges and velvety softness in the middle, with a rich flavor that satisfies any chocolate craving.
+            Brownies are one of those timeless desserts that feel like comfort in every bite. They’re dense, chocolaty squares with a soft center that melts just slightly under the warmth of your fingers. <br>The aroma alone—deep cocoa mixed with a hint of butter—can turn an ordinary day into something a little sweeter. Each bite gives that perfect blend of chewiness around the edges and velvety softness in the middle, <br>with a rich flavor that satisfies any chocolate craving.
         </p>
         <br>
         <h4>Ingredients</h4>
@@ -23,6 +23,45 @@
             <li>1/4 teaspoon salt</li>
             <li>1/4 teaspoon baking powder</li>
         </ul>
+
+        <h4>Steps</h4>
+        <ol>
+            <li>Preheat Oven:
+                <ul>
+                    <li>to 350°F (175°C). Grease an 8×8 baking dish or line it with parchment paper.</li>
+                </ul>
+            </li>
+
+            <li>Mix Wet Ingredients:
+                <ul>
+                    <li>In a bowl, stir together melted butter, sugar, eggs, and vanilla until smooth.</li>
+                </ul>
+            </li>
+
+            <li>Add Dry Ingredients:
+                <ul>
+                    <li>Gently fold in the cocoa powder, flour, salt, and baking powder. Mix just until combined.</li>
+                </ul>
+            </li>
+
+            <li>Customize:
+                <ul>
+                    <li>Add chocolate chips or nuts if you want extra texture.</li>
+                </ul>
+            </li>
+
+            <li>Bake:
+                <ul>
+                    <li>Pour the batter into the baking dish and spread evenly. Bake for 20–25 minutes, or until the center is set but still soft.</li>
+                </ul>
+            </li>
+
+            <li>Cool and Slice:
+                <ul>
+                    <li>Let the brownies cool before cutting into squares for clean edges.</li>
+                </ul>
+            </li>
+        </ol>
 
         <a href="../index.html">Home</a>
     </body>
