--- a/recipes/tres_leches_cake.html
+++ b/recipes/tres_leches_cake.html
@@ -37,6 +37,61 @@
         </ul>
 
         <h4>Steps</h4>
+        <ol>
+            <li>Preheat Oven:
+                <ul>
+                    <li>to 350°F (175°C). Grease a 9×13 baking dish.</li>
+                </ul>
+            </li>
+
+            <li>Make the cake batter:
+                <ul>
+                    <li>Beat the butter and sugar together until fluffy. Add eggs one at a time, then mix in vanilla.</li>
+                </ul>
+            </li>
+
+            <li>Combine dry Ingredients:
+                <ul>
+                    <li>In a separate bowl, whisk the flour, baking powder, and salt. Add to the wet mixture and mix until smooth.</li>
+                </ul>
+            </li>
+
+            <li>Bake:
+                <ul>
+                    <li>Pour the batter into the baking dish and bake 25–30 minutes, or until a toothpick comes out clean.</li>
+                </ul>
+            </li>
+
+            <li>Poke Holes:
+                <ul>
+                    <li>Let the cake cool slightly, then use a fork or skewer to poke holes all over the surface.</li>
+                </ul>
+            </li>
+
+            <li>Pour the Milk Mixture:
+                <ul>
+                    <li>Whisk evaporated milk, condensed milk, and heavy cream together. Slowly pour it over the warm cake so it absorbs evenly.</li>
+                </ul>
+            </li>
+
+            <li>Chill:
+                <ul>
+                    <li>Refrigerate for at least 2–4 hours (overnight is best).</li>
+                </ul>
+            </li>
+
+            <li>Make the Topping:
+                <ul>
+                    <li>Refrigerate for at least 2–4 hours (overnight is best).</li>
+                </ul>
+            </li>
+
+            <li>Garnsih and Serve:
+                <ul>
+                    <li>Add cinnamon or fruit on top if desired. Serve chilled.</li>
+                </ul>
+            </li>
+        </ol>
 
         <a href="../index.html">Home</a>
     </body>
