--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Brownies</h1>
-        <img src="/images/brownies.jpg" height="600" width="500">
+        <img src="images/brownies.jpg" height="600" width="500">
         <br>
         <h2>Description</h2>
         <p>
