--- a/recipes/tres_leches_cake.html
+++ b/recipes/tres_leches_cake.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Tres Leches Cake</h1>
-        <img src="images/tres_leche_cake.jpg" height="600" width="500">
+        <img src="/images/tres_leche_cake.jpg" height="600" width="500">
         <br>
         <h2>Description</h2>
         <p>Tres leches cake is a soft, cloud-like dessert that feels almost weightless when you take a bite. Baked as a simple sponge cake, <br>it becomes something magical once it’s soaked in a mixture of three milks—evaporated milk, sweetened condensed milk, and heavy cream.<br> The result is a dessert that stays incredibly moist without ever feeling soggy. Every forkful delivers a cool, creamy sweetness that spreads across your palate, <br>making this cake refreshing, satisfying, and surprisingly light despite its richness.</p>
